fixed css readability, svg icons on footer

--- a/lospollos/styles.css
+++ b/lospollos/styles.css
@@ -939,8 +939,9 @@ nav input:checked + label .bar3 {
 ---------------------------------------------------------- */
 footer {
   text-align: center;
+  margin-top: 10px;
   padding: 30px;
-  background: transparent;
+  background: #111;
   color: #fff;
   position: relative;
   border-radius: 12px;
